# emulagbor

./: CMakeLists.txt  README.md
exe/: emulagbor.c
inc/: cpu.h  cpu_flags.h  cpu_opcodes.h  cpu_registers.h  emulagbor.h  types.h
src/: bits_utils.c  cpu.c  cpu_flags.c  cpu_opcodes.c  cpu_registers.c  emulagbor.c  gb.c
tests/: cpu_flags_test.c  cpu_opcodes_test.c  cpu_registers_test.c
tools/: generates_opcodes_c.py
